<resources>
    <string name="app_name">SenFlexP</string>
    <string name="indian_institute_of_technology_nkharagpur">Indian Institute of Technology Kharagpur</string>
    <string name="team_orela">ORELA\nDepartment of Physics</string>
    <string name="email_or_mobile">Email or Mobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_in">Log In!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish_button">Finish</string>
    <string name="new_test">New Test</string>
    <string name="past_tests">Previous Tests</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="welcome_to">Welcome To</string>
    <string name="register">Register and</string>
    <string name="start_test">Start Test!</string>
    <string name="name">Name</string>
    <string name="device_id">Device ID</string>
    <string name="test_id">Test ID:</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sex">Sex</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="device_status">Device Status</string>
    <string name="senflexp_connected">SenFlexP:  </string>
    <string name="no">No</string>
    <string name="time_left">Time Left:</string>
    <string name="instruction">Instruction:</string>
    <string name="heart_rate">Heart Rate:</string>
    <string name="oxygen_saturation">Oxygen Saturation:</string>
    <string name="perfusion_index">Perfusion Index:</string>
    <string name="start_study">Start Study</string>
    <string name="pour_drops_of_water">Pour Drops of Water.</string>
    <string name="do_nothing">Do Nothing</string>
    <string name="pour_drops_of_sample">Pour Drops of Sample</string>
    <string name="pulseoximeter_connected">iOxy:</string>
    <string name="sendind_data_to_server">Sendind Data to Server</string>
    <string name="scanning">Scanning.</string>
    <string name="scanning_failed">Scanning Failed.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="secure_login_text">Securely Logging You In SenFlexP</string>
    <string name="secure_logout">Securely Logging You Out.</string>
    <string name="my_details">My Details</string>
    <string name="back">Back</string>
    <string name="activation_time">Activation Time</string>
    <string name="user_code">User Code</string>
    <string name="house_apartment">House/Apartment</string>
    <string name="locality">Locality</string>
    <string name="police_station">Police Station</string>
    <string name="post_office">Post Office</string>
    <string name="district">District</string>
    <string name="landmark">Landmark</string>
    <string name="pin_code">Pin Code</string>
    <string name="address_type">Address Type</string>
    <string name="assigned_device">Assigned Device</string>
    <string name="no_device">No Device Assigned.</string>
    <string name="test_details">Test Details</string>
    <string name="re_submit">Re Submit</string>
    <string name="save_for_later">Save for Later</string>
    <string name="getting_details">Getting Your Details.</string>
    <string name="verify_test_data">Verifying Test Data.</string>
    <string name="uploading_test_data">Uploading Test Data to Server.</string>
    <string name="o_s_time">0s.</string>
    <string name="submitted_test">Submitted Test</string>
    <string name="yet_to_submit">Yet to Submit</string>
    <string name="previous_ntest">Previous\nTest</string>
    <string name="test">Test</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Name</string>
    <string name="search_by_name">Search by Name</string>
    <string name="fetching_test_data">Fetching Test Details</string>
    <string name="test_time">Test Time</string>
    <string name="report_generated">Report Generated.</string>
    <string name="submit">Submit</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_data_available_submission">No Data Available for Submission</string>
    <string name="one_time_password">One Time Password</string>
    <string name="enter_otp_to_verify_mobile_number">Enter OTP to Verify Mobile Number.</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submission_time">Submission Time</string>
    <string name="last_test_id">Last Test ID</string>
    <string name="sample_id">Sample ID</string>
    <string name="last_sample_id">Last Sample ID</string>
    <string name="sample_collection_date">Sample Collection Date</string>
    <string name="sample_collection_time">Sample Collection Time</string>
    <string name="stop_study">Stop Study</string>
    <string name="you_may_submit">You May Submit</string>

    <string-array name="gender">
        <item>Select Sex</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="specimen">
        <item>Select Specimen Type</item>
        <item>Nasal Swab</item>
        <item>Throat Swab</item>
        <item>Both</item>
    </string-array>
</resources>
