<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_splash">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/welcome_back"
        android:gravity="center"
        android:textSize="@dimen/_20sdp"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/log_in"
        android:gravity="center"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_400sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/roboto"
                android:text="@string/app_name"
                android:textColor="@color/lightBlue"
                android:textSize="@dimen/_40sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:endIconMode="clear_text">

                <EditText
                    android:id="@+id/email_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_or_mobile"
                    android:maxLines="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:inputType="text"
                    tools:ignore="TextFields"
                    android:text="9804710805"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:endIconMode="password_toggle">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:inputType="textPassword"
                    android:text="1234"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/lightBlue"
                    android:checked="true"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/lightBlue"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_40sdp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/senflex_logo"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>