<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_5sdp"
    android:gravity="center">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_370sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardElevation="@dimen/_8sdp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="@dimen/_23sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/dialog_text"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_otp_to_verify_mobile_number"
                    android:gravity="center"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/lightBlue"
                    android:layout_marginTop="@dimen/_20sdp"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_140sdp"
                    app:lottie_rawRes="@raw/otp"
                    app:lottie_loop="true"
                    app:lottie_autoPlay="true"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/_240sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:endIconMode="password_toggle">

                    <EditText
                        android:id="@+id/otp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/one_time_password"
                        android:maxLines="1"
                        android:maxLength="6"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:inputType="numberPassword"
                        tools:ignore="TextFields"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/resend_text"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp"
                    android:gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/lightBlue"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:clickable="true"
                    android:focusable="true"/>

                <Button
                    android:id="@+id/otpSubmit"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/submit_otp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:elevation="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_1sdp">

            <Button
                android:id="@+id/closeButton"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/close_button"/>

        </FrameLayout>

    </FrameLayout>

</LinearLayout>